test/integration/bad/new/tilde-bad16.stan
transformed data { T~T(T]